--- a/css/styles.css
+++ b/css/styles.css
@@ -3133,8 +3133,8 @@ input::-moz-focus-inner {
 }
 
 .s-header__logo img {
-    width: 68px;
-    height: 10px;
+    width: 80px;
+    height: auto;
     margin-bottom: 0;
 }
 
