--- a/css/styles.css
+++ b/css/styles.css
@@ -4132,7 +4132,7 @@ html.no-csstransitions .s-hero__content {
 }
 
 .s-about__photo {
-    background-image: url(../images/about-photo.jpg);
+    background-image: url(../images/about.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
